Fix assert trigger when using FFMPEGWrapper for gif format.

Trying to re-use the process without proper termination resulted
in assert. It's good that we caught it, but it's now fixed...

BUG:446320